--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,4 @@ PORT=5001
 MONGODB_URI=mongodb://localhost:27017/outfit-recommendation
 NODE_ENV=development
 GEMINI_API_KEY=
+CORS_ORIGIN=http://localhost:5173,https://product-analysis-eight.vercel.app
